--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
       id="rtl-link"
       rel="stylesheet"
       type="text/css"
-      href="css/bootstrap.css"
+      href="/css/bootstrap.css"
     />
 
     <!-- Remix Icon css -->
-    <link rel="stylesheet" type="text/css" href="css/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="/css/remixicon.css" />
 
     <!-- Style css -->
     <link
       id="change-link"
       rel="stylesheet"
       type="text/css"
-      href="css/style.css"
+      href="/css/style.css"
     />
-    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="/css/fontawesome.css">
   </head>
   <body class="grocery-color public-san-body loaded">
     <div id="root"></div>
